# python-eli5

./: 01_debugging_scikit_learn_text_classification_pipeline.ipynb  Makefile  _quarto.yaml  linear_model.ipynb  main.py  pyproject.toml
docs/: 01_debugging_scikit_learn_text_classification_pipeline.html  README.md  index.html  linear_model.html  search.json
docs/refresher/: 001_how_count_vectorizer_works.html  001_how_count_vectorizer_works.md  02_debugging_black_box_text_classifier.html
refresher/: 02_debugging_black_box_text_classifier.ipynb
