[project]
name = "python-eli5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "eli5>=0.13.0",
    "ipywidgets>=8.1.5",
    "isort>=6.0.1",
    "jupyterlab-code-formatter>=3.0.2",
    "jupyterlab-vim>=4.1.4",
    "matplotlib>=3.10.1",
    "numpy==1.23.0",
    "pandas>=1.5.1",
    "scikit-learn==1.2.0",
    "seaborn>=0.13.2",
]
